03_Access/03-07_Multi-Node/k8s/webapp-ing.yaml
# Exercise 05-03 v1.0.0
#
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ing
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
           name: web01-svc
           port:
             number: 80
    # host: dev.webapp.192.168.64.199.xip.io
